<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/moodwork2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <!-- 🔙 Toolbar -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/workoutToolbar"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:background="?attr/colorPrimary"
        android:title="Workout Suggestions"
        android:titleTextColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtWorkout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/workout_question"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626" />

    <Button
        android:id="@+id/btnHappy"
        android:layout_width="201dp"
        android:layout_height="42dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/happy_mood"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687"
        tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnTired"
        android:layout_width="201dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/tired_mood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnHappy"
        tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnStressed"
        android:layout_width="201dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/stressed_mood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTired"
        tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnEnergetic"
        android:layout_width="201dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/energetic_mood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStressed"
        tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imgWorkout"
        android:layout_width="299dp"
        android:layout_height="181dp"
        android:background="#FDC40C"
        android:backgroundTint="#FDC40C"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/txtWorkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
