<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:padding="24dp">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="362dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:shadowColor="#FFFFFF"
        android:text="@string/login_button"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484"
        tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editEmail"
        app:layout_constraintVertical_bias="0.045"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/txtSignup"
        android:layout_width="50dp"
        android:layout_height="23dp"
        android:layout_marginTop="40dp"
        android:text="Sign Up"
        android:textColor="#0F0F0F"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
